<resources>
    <string name="app_name">Locale.io</string>
    <string name="tag_line">Let\'s control sound</string>
    <string name="hi_welcome_to_sound_io">Hi, Welcome to Locale.io</string>
    <string name="select_your_desired_location">Select your desired location</string>
    <string name="choose_your_required_sound_mode">Choose the sound mode</string>
    <string name="sound_mode_will_change_automatically_whenever_you_are_around_your_selected_location">Sound mode will change automatically whenever you are around your selected location</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="no_task_added">No Task Added.</string>
    <string name="you_can_add_a_task_by_clicking_button_below">You can add a task by clicking "+" button below.</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="created_at">Created at : %s</string>
    <string name="whenever_you_are_within_x_meters_of">whenever you are within %s meters of</string>
    <string name="sound_mode_will_be_changed_to">Sound Mode will be changed to</string>
    <string name="location_will_update_every_x_seconds">Location will update every %s seconds</string>
    <string name="add_task">New Task</string>
    <string name="search_address_here">Search Address</string>
    <string name="fetch_current_location_from_gps">Use my current location</string>
    <string name="_1_you_will_be_notified_whenever_the_selected_location_is_within_100_metres_n">1. You will be notified whenever the selected location is within %s metres. <br /> 2. The location will be updated after every %s seconds.</string>
    <string name="address">Address</string>
    <string name="the_flat_house_no_may_or_may_not_be_accurate_but_coordinates_are_accurate">The flat/house no. may or may not be accurate, but coordinates are accurate.</string>
    <string name="ringer">Ringer</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="your_device_is_currently_on_x_mode">Your device is currently on %s mode.</string>
    <string name="update_location_in_every">Update Location in every %s seconds</string>
    <string name="distance_from_location">Notify me when I am %s from location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="no_items_added_message">No Task added.</string>
    <string name="add_new">Add New</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="or">OR</string>
    <string name="title">Title (Optional)</string>
    <string name="description_message">Description/Message (Optional)</string>
    <string name="change_sound_mode_from">Change Sound Mode from</string>
    <string name="change_sound_mode_to">Change device\'s sound mode to</string>
    <string name="save">Save</string>
    <string name="do_you_want_to_toggle_change_sound_mode">Do you want to toggle/change sound mode?</string>
    <string name="show_distance_difference_notification">Show distance difference notification</string>
</resources>