<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:chipSpacingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/ringer"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_translucent"
            android:checkable="true"
            android:text="@string/ringer"
            app:chipIcon="@drawable/ic_baseline_volume_up_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/vibrate"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/vibrate"
            app:chipIcon="@drawable/ic_baseline_vibration_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/silent"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/silent"
            app:chipIcon="@drawable/ic_baseline_volume_off_24" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>